# ldaf

./: README.md  pyproject.toml  requirements.txt  setup.py
ldaf/: App.py  DataSource.py  Main.ui  MainWindow.py  Makefile  Module.py  Settings.py  helper.py
ldaf/Widgets/: FeatureSelector.py  PlotWindow.py  TableWidget.py  mplwidget.py
